# masters

./: .gitignore  README.md  main.py  pyproject.toml
articles/001/: summary.md
articles/002/: summary.md
deeplearning/: 01-larvae-classification-simple.ipynb  01-pytorch-intro.ipynb  02-dataset-examples.ipynb  02-larvae-classification-advanced.ipynb  03-larvae-classification-pretrained.ipynb  04-simple-regression.ipynb  05-activation-functions.ipynb  05-larvae-classification-pretrained.ipynb  06-dataset-preparation.ipynb  06-larvae-classification-advanced.ipynb  06-larvae-classification-homogeneous.ipynb  07-larvae-classification-custom.ipynb  14-transpose-conv2D.ipynb  15-semantic-segmentation.ipynb  19-text-classification.ipynb  22-pytorch-ViT.ipynb  README.md  dataset.py  metrics.py  optim_utils.py  training.py  visualize.py
deeplearning/exercises/: 11-visualize-model.ipynb  13-finetuning-yolo.ipynb
deeplearning/figs/: .~lock.RNN-Layer.jpg#  CNNForClassification.odp  ContrastiveLearning.odg  FastRCNN.odg  IoU.odg  adjacency-a.odg  batch-norm-b.odg  batch-norm-c.odg  convactiv.odg  definitions.tex~  (+15 more)
imageprocessing/: geotransforms.py
mo434/: 01-pytorch-intro.ipynb  07-first-image-neuralnet.ipynb  10-pretrained-convnet.ipynb  16-nlp-intro.ipynb  17-traditional-feature-engineering.ipynb  21-transformers.ipynb  Extracting-embeddings-transformer.ipynb  TextRepresentation-AdvancedFeatureEngineering.ipynb  candidate_objects.ipynb  contrastive-learning.ipynb  introducing-pytorch-convnet.ipynb  pytorch-convnet.ipynb  simple-classification.ipynb
ssrl/: download.ipynb
(+58 files in other folders)
