[project]
name = "Masters"
version = "0.1.0"
description = "Masters disciplines"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bitarray==2.9.2",
    "bitstring==4.1.4",
    "ipykernel>=6.29.5",
    "numpy>=2.1.2",
    "opencv-python==4.10.0.84",
    "scikit-image==0.25.0",
    "scipy==1.13.1",
    "torch>=2.7.0",
    "torch-snippets==0.547",
    "torchsummary==1.5.1",
    "torchtext==0.18.0",
    "torchvision>=0.22.0",
    "tqdm==4.67.1",
]
